--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
    "id": "70376194",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "14         14     Thomas High School   Charter  1635  1043130"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,6 +210,33 @@
    "source": [
     "school_data_df = pd.read_csv(school_data_to_load)\n",
     "school_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "be9a78b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student ID                       0\n",
+       "student_name          Paul Bradley\n",
+       "gender                           M\n",
+       "grade                          9th\n",
+       "school_name      Huang High School\n",
+       "reading_score                   66\n",
+       "math_score                      79\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(student_data_df.loc[0,:])"
    ]
   },
   {
@@ -1169,7 +1196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Public\\Documents\\Wondershare\\CreatorTemp\\ipykernel_4340\\1093442688.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Public\\Documents\\Wondershare\\CreatorTemp\\ipykernel_12840\\1093442688.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
      ]
     }
@@ -5057,8 +5084,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "29de613b",
+   "execution_count": 82,
+   "id": "945a4bc5",
    "metadata": {},
    "outputs": [
     {
@@ -5071,7 +5098,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5084,8 +5111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "e98f720c",
+   "execution_count": 83,
+   "id": "fcef9399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5095,8 +5122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "b46e2a88",
+   "execution_count": 84,
+   "id": "ec05eb2e",
    "metadata": {},
    "outputs": [
     {
@@ -5419,7 +5446,7 @@
        "Wright High School                            <$586  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5433,8 +5460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "8503dc7f",
+   "execution_count": 85,
+   "id": "fd1b5ef3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5452,8 +5479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "735ac38e",
+   "execution_count": 86,
+   "id": "4d5a4cfd",
    "metadata": {},
    "outputs": [
     {
@@ -5467,7 +5494,7 @@
        "Name: % Overall Passing, dtype: float64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5478,8 +5505,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "aa90b058",
+   "execution_count": 87,
+   "id": "620afcad",
    "metadata": {},
    "outputs": [
     {
@@ -5578,7 +5605,7 @@
        "$646-675                               53.526855  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5597,8 +5624,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "0c40a225",
+   "execution_count": 88,
+   "id": "65eb7aef",
    "metadata": {},
    "outputs": [
     {
@@ -5697,7 +5724,7 @@
        "$646-675                                     54  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5719,8 +5746,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "f7dc72e8",
+   "execution_count": 89,
+   "id": "4b06ee7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5731,8 +5758,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "7d18a3f7",
+   "execution_count": 90,
+   "id": "204684f6",
    "metadata": {},
    "outputs": [
     {
@@ -5881,7 +5908,7 @@
        "Griffin High School                       $586-630  Medium (1000-1999)  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5895,8 +5922,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "b0e0513a",
+   "execution_count": 91,
+   "id": "42ae6bac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5914,8 +5941,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "7cbe90aa",
+   "execution_count": 92,
+   "id": "04adbd31",
    "metadata": {},
    "outputs": [
     {
@@ -5997,7 +6024,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6016,8 +6043,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "1f1208dd",
+   "execution_count": 93,
+   "id": "3d1b81bd",
    "metadata": {},
    "outputs": [
     {
@@ -6099,7 +6126,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6121,28 +6148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "44e0c04d",
+   "execution_count": 94,
+   "id": "fd699aae",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Type'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [106]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate averages for the desired columns.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m type_math_scores \u001b[38;5;241m=\u001b[39m \u001b[43mschool_data_complete_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mType\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mmean()[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmath_score\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      4\u001b[0m type_reading_scores \u001b[38;5;241m=\u001b[39m per_school_summary_df\u001b[38;5;241m.\u001b[39mgroupby([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSchool Type\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m.\u001b[39mmean()[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage Reading Score\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      6\u001b[0m type_passing_math \u001b[38;5;241m=\u001b[39m per_school_summary_df\u001b[38;5;241m.\u001b[39mgroupby([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSchool Type\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m.\u001b[39mmean()[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m Passing Math\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:7712\u001b[0m, in \u001b[0;36mDataFrame.groupby\u001b[1;34m(self, by, axis, level, as_index, sort, group_keys, squeeze, observed, dropna)\u001b[0m\n\u001b[0;32m   7707\u001b[0m axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_axis_number(axis)\n\u001b[0;32m   7709\u001b[0m \u001b[38;5;66;03m# https://github.com/python/mypy/issues/7642\u001b[39;00m\n\u001b[0;32m   7710\u001b[0m \u001b[38;5;66;03m# error: Argument \"squeeze\" to \"DataFrameGroupBy\" has incompatible type\u001b[39;00m\n\u001b[0;32m   7711\u001b[0m \u001b[38;5;66;03m# \"Union[bool, NoDefault]\"; expected \"bool\"\u001b[39;00m\n\u001b[1;32m-> 7712\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mDataFrameGroupBy\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   7713\u001b[0m \u001b[43m    \u001b[49m\u001b[43mobj\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7714\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkeys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7715\u001b[0m \u001b[43m    \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7716\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlevel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7717\u001b[0m \u001b[43m    \u001b[49m\u001b[43mas_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mas_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7718\u001b[0m \u001b[43m    \u001b[49m\u001b[43msort\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7719\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgroup_keys\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup_keys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7720\u001b[0m \u001b[43m    \u001b[49m\u001b[43msqueeze\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msqueeze\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# type: ignore[arg-type]\u001b[39;49;00m\n\u001b[0;32m   7721\u001b[0m \u001b[43m    \u001b[49m\u001b[43mobserved\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mobserved\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7722\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdropna\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdropna\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   7723\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py:882\u001b[0m, in \u001b[0;36mGroupBy.__init__\u001b[1;34m(self, obj, keys, axis, level, grouper, exclusions, selection, as_index, sort, group_keys, squeeze, observed, mutated, dropna)\u001b[0m\n\u001b[0;32m    879\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m grouper \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    880\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgroupby\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgrouper\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_grouper\n\u001b[1;32m--> 882\u001b[0m     grouper, exclusions, obj \u001b[38;5;241m=\u001b[39m \u001b[43mget_grouper\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    883\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    884\u001b[0m \u001b[43m        \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    885\u001b[0m \u001b[43m        \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    886\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlevel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlevel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    887\u001b[0m \u001b[43m        \u001b[49m\u001b[43msort\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    888\u001b[0m \u001b[43m        \u001b[49m\u001b[43mobserved\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mobserved\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    889\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmutated\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmutated\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    890\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdropna\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdropna\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    891\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    893\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj \u001b[38;5;241m=\u001b[39m obj\n\u001b[0;32m    894\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis \u001b[38;5;241m=\u001b[39m obj\u001b[38;5;241m.\u001b[39m_get_axis_number(axis)\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\grouper.py:882\u001b[0m, in \u001b[0;36mget_grouper\u001b[1;34m(obj, key, axis, level, sort, observed, mutated, validate, dropna)\u001b[0m\n\u001b[0;32m    880\u001b[0m         in_axis, level, gpr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, gpr, \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    881\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 882\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(gpr)\n\u001b[0;32m    883\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(gpr, Grouper) \u001b[38;5;129;01mand\u001b[39;00m gpr\u001b[38;5;241m.\u001b[39mkey \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    884\u001b[0m     \u001b[38;5;66;03m# Add key to exclusions\u001b[39;00m\n\u001b[0;32m    885\u001b[0m     exclusions\u001b[38;5;241m.\u001b[39madd(gpr\u001b[38;5;241m.\u001b[39mkey)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Type'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate averages for the desired columns.\n",
-    "type_math_scores = school_data_complete_df.groupby([\"Type\"]).mean()[\"math_score\"]\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
     "\n",
     "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
     "\n",
@@ -6155,8 +6167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "ce98aa9e",
+   "execution_count": 95,
+   "id": "8545f9fb",
    "metadata": {},
    "outputs": [
     {
@@ -6228,7 +6240,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6247,8 +6259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "d08e59cf",
+   "execution_count": 96,
+   "id": "a2859620",
    "metadata": {},
    "outputs": [
     {
@@ -6320,7 +6332,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6343,7 +6355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4afe4c3e",
+   "id": "c67ce9b1",
    "metadata": {},
    "outputs": [],
    "source": []
