--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -1784,6 +1784,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>38,709</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>81.9</td>\n",
+       "      <td>74.8</td>\n",
+       "      <td>85.7</td>\n",
+       "      <td>64.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget Average Math Score  \\\n",
+       "0             15         38,709  $24,649,428.00               78.9   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
+       "0                  81.9           74.8              85.7              64.9  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "district_summary_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
